Kubernetes/Istio/DestinationRule2.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hotels-destination
spec:
  host: local-hotels-backend
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5 
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 80
