Kubernetes/Istio/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cars-virtual
  namespace: istio-system
spec:
  hosts:
  - local-cars-backend.application.svc.cluster.local
  http:
  - timeout: 8s
    route:
    - destination:
        host: local-cars-backend.application.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,5xx
