Kubernetes/Istio/VirtualService2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cars-virtual
spec:
  hosts:
    - local-hotels-backend
  http:
    - route:
        - destination:
            host: local-hotels-backend
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
